<resources>
    <string name="app_name">三河市公共卫生</string>
    <string name="tabwidget_infor">讯息</string>
    <string name="main_mainTitle">三河市公共卫生</string>

    //register
    <string name="register">注册</string>
    <string name="register_name">请输入真实姓名</string>
    <string name="register_mobile">请输入手机号</string>
    <string name="register_validateCode">请输入手机验证码</string>
    <string name="register_getValidateCode">获取验证码</string>
    <string name="register_password">请输入密码</string>
    <string name="register_repeatPassword">请再次输入密码</string>
    <string name="register_idnumber">请输入身份证号码</string>
    //forget
    <string name="forget">重置密码</string>
    <string name="forget_password">请输入新密码</string>
    //change
    <string name="change">修改密码</string>
    <string name="change_password">请输入新密码</string>
    //
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
</resources>
