<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/aa"
    android:padding="20dp">

<!-- android:background="@drawable/linearlayout_background"-->
    <LinearLayout
        android:id="@+id/linear_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:orientation="vertical">

        <!-- 上半部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/register_smallTitle_marginLeft">

            <TextView
                android:id="@+id/text_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="用户注册"
                android:layout_margin="5dp"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请填写以下信息"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:layout_below="@+id/text_register_title"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>

        <!-- 中间部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="3">

            <EditText
                android:id="@+id/edit_register_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:singleLine="true"
                android:phoneNumber="true"
                android:background="@drawable/edittext_register_shape"
                android:drawableLeft="@mipmap/login_phone_icon"
                android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                android:hint="@string/register_mobile"
                android:padding="@dimen/editText_login_phone_padding"
                android:textColor="@color/secondaryColor"
                android:textColorHint="@color/secondaryColor"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/edit_register_validateCode"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                    android:layout_marginRight="@dimen/register_smallTitle_textSize"
                    android:singleLine="true"
                    android:numeric="integer"
                    android:background="@drawable/edittext_register_shape"
                    android:drawableLeft="@mipmap/login_phone_icon"
                    android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                    android:hint="@string/register_validateCode"
                    android:padding="@dimen/editText_login_phone_padding"
                    android:textColor="@color/secondaryColor"
                    android:textColorHint="@color/secondaryColor"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/button_register_getValidateCode"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/register_getValidateCode"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                    android:padding="@dimen/editText_login_phone_padding"
                    android:textColorHint="@color/secondaryColor"
                    android:textSize="12sp"
                    android:background="@drawable/button_shape"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/line"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                />
            <EditText
                android:id="@+id/edit_register_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:singleLine="true"
                android:background="@drawable/edittext_register_shape"
                android:drawableLeft="@mipmap/login_psw_icon"
                android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                android:padding="@dimen/editText_login_phone_padding"
                android:hint="@string/register_password"
                android:textColor="@color/secondaryColor"
                android:textColorHint="@color/secondaryColor"
                android:password="true"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_register_repsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:singleLine="true"
                android:background="@drawable/edittext_register_shape"
                android:drawableLeft="@mipmap/login_psw_icon"
                android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                android:padding="@dimen/editText_login_phone_padding"
                android:hint="@string/register_repeatPassword"
                android:textColor="@color/secondaryColor"
                android:textColorHint="@color/secondaryColor"
                android:password="true"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/line"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                />


            <EditText
                android:id="@+id/edit_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:background="@drawable/edittext_register_shape"
                android:drawableLeft="@mipmap/personal_register_icon"
                android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                android:padding="@dimen/editText_login_phone_padding"
                android:hint="@string/register_name"
                android:textColor="@color/secondaryColor"
                android:textColorHint="@color/secondaryColor"
                android:singleLine="true"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_register_idnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:singleLine="true"
                android:background="@drawable/edittext_register_shape"
                android:drawableLeft="@mipmap/register_id_icon"
                android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                android:padding="@dimen/editText_login_phone_padding"
                android:hint="@string/register_idnumber"
                android:textColor="@color/secondaryColor"
                android:textColorHint="@color/secondaryColor"
                android:textSize="15sp" />



        </LinearLayout>

        <!-- 下半部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_register_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_margin="@dimen/register_smallTitle_marginLeft"
                android:background="@drawable/button_shape"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
