<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/aa"
    android:padding="20dp">

    <!-- android:background="@drawable/linearlayout_background"-->
    <LinearLayout
        android:id="@+id/linear_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:orientation="vertical">

        <!-- 上半部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/register_smallTitle_marginLeft"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:text="用户注册"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_register_title"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:text="请填写以下信息"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </RelativeLayout>

        <!-- 中间部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <com.seimun.mobileHealth.util.ClearEditText
                android:id="@+id/edit_register_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_register_shape"
                android:drawableLeft="@mipmap/login_phone_icon"
                android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                android:hint="@string/register_mobile"
                android:padding="@dimen/editText_login_phone_padding"
                android:phoneNumber="true"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/secondaryColor"
                android:textColorHint="@color/secondaryColor"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_register_validateCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                    android:layout_marginRight="@dimen/register_smallTitle_textSize"
                    android:layout_marginTop="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/edittext_register_shape"
                    android:drawableLeft="@mipmap/login_phone_icon"
                    android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                    android:hint="@string/register_validateCode"
                    android:numeric="integer"
                    android:padding="@dimen/editText_login_phone_padding"
                    android:singleLine="true"
                    android:textColor="@color/secondaryColor"
                    android:textColorHint="@color/secondaryColor"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_register_getValidateCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:padding="@dimen/editText_login_phone_padding"
                    android:text="@string/register_getValidateCode"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/secondaryColor"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:layout_marginTop="5dp"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:layout_marginTop="5dp">

                <com.seimun.mobileHealth.util.ClearEditText
                    android:id="@+id/edit_register_psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_register_shape"
                    android:drawableLeft="@mipmap/login_psw_icon"
                    android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"
                    android:paddingTop="@dimen/editText_login_phone_padding"
                    android:paddingBottom="@dimen/editText_login_phone_padding"
                    android:paddingLeft="@dimen/editText_login_phone_padding"
                    android:paddingRight="40dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/secondaryColor"
                    android:textColorHint="@color/secondaryColor"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_register_see_psw"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@mipmap/show_pass" />


            </RelativeLayout>


            <EditText
                android:id="@+id/edit_register_repsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_register_shape"
                android:drawableLeft="@mipmap/login_psw_icon"
                android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                android:hint="@string/register_repeatPassword"
                android:padding="@dimen/editText_login_phone_padding"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/secondaryColor"
                android:textColorHint="@color/secondaryColor"
                android:textSize="15sp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:layout_marginTop="5dp"
                android:background="@color/line"
                android:visibility="gone" />


            <EditText
                android:id="@+id/edit_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_register_shape"
                android:drawableLeft="@mipmap/personal_register_icon"
                android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                android:hint="@string/register_name"
                android:padding="@dimen/editText_login_phone_padding"
                android:singleLine="true"
                android:textColor="@color/secondaryColor"
                android:textColorHint="@color/secondaryColor"
                android:textSize="15sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edit_register_idnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
                android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_register_shape"
                android:drawableLeft="@mipmap/register_id_icon"
                android:drawablePadding="@dimen/edit_login_phone_drawPadding"
                android:hint="@string/register_idnumber"
                android:padding="@dimen/editText_login_phone_padding"
                android:singleLine="true"
                android:textColor="@color/secondaryColor"
                android:textColorHint="@color/secondaryColor"
                android:textSize="15sp"
                android:visibility="gone" />


        </LinearLayout>

        <!-- 下半部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_register_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/register_smallTitle_marginLeft"
                android:background="@drawable/button_shape"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_send_code_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/register_smallTitle_marginLeft"
            android:layout_marginRight="@dimen/register_smallTitle_marginLeft"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_register_shape"
            android:hint="@string/register_name"
            android:padding="@dimen/editText_login_phone_padding"
            android:singleLine="true"
            android:text="短信验证码已发送至手机，请注意查收"
            android:textColor="@color/health_infor_nameTextColor"
            android:textSize="15sp"
             />


    </LinearLayout>

</RelativeLayout>
